adjust pathing for local and server

--- a/public/story.html
+++ b/public/story.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Uwimana's African Stories</title>
 
 </head>
@@ -30,19 +30,19 @@
 
         <div class="wrapper-controls-paging">
             <div class="controls">
-                <audio id="audio" type="audio/mp3" src="public/audio/sw/0001/0001_sw_01.mp3">
+                <audio id="audio" type="audio/mp3" src="/audio/sw/0001/0001_sw_01.mp3">
                     Your browser does not support the audio element.
                 </audio>
-                <img src="public/images/panel/back2.png" id="back" class="control-back"></img>
+                <img src="/images/panel/back2.png" id="back" class="control-back"></img>
                 <div class="wrapper-playpause">
                     <button id="playbutton" class='visible'>
-                        <img src="public/images/panel/play.png" id="play" class="control-play visible"></img>
+                        <img src="/images/panel/play.png" id="play" class="control-play visible"></img>
                     </button>
                     <button id="pausebutton" class='hidden'>
-                        <img src="public/images/panel/pause.png" id="pause" class="control-pause hidden"></img>
+                        <img src="/images/panel/pause.png" id="pause" class="control-pause hidden"></img>
                     </button>
                 </div>
-                <img src="public/images/panel/forward2.png" id="forward" class="control-forward"></img>
+                <img src="/images/panel/forward2.png" id="forward" class="control-forward"></img>
             </div>
 
             <div class="paging">
@@ -82,8 +82,8 @@
 
     </footer>
 
-    <script type="module" src="./public/scripts/loadControls.js"></script>
-    <script type="module" src="./public/scripts/story/story.js"></script>
+    <script type="module" src="/scripts/loadControls.js"></script>
+    <script type="module" src="/scripts/story/story.js"></script>
 
 </body>
 
