--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Uwimana's African Stories</title>
 </head>
 
@@ -35,8 +35,8 @@
 
         </container>
 
-        <script type="module" src="./public/scripts/loadControls.js"></script>
-        <script type="module" src="./public/scripts/home/home.js"></script>
+        <script type="module" src="/scripts/loadControls.js"></script>
+        <script type="module" src="/scripts/home/home.js"></script>
 </body>
 
 </html>
